[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/scenes/GameScene/Chest.gd" type="Script" id=1]
[ext_resource path="res://assets/Assets.png" type="Texture" id=2]
[ext_resource path="res://assets/particles/magic_05.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 1

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.851613, 1 )
colors = PoolColorArray( 0.95504, 1, 0.351563, 1, 0.992157, 1, 0, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=12]
max_value = 2.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.979545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
angular_velocity = -100.0
angular_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 1.0
tangential_accel_random = 1.0
angle = 360.0
angle_random = 1.0
scale = 0.08
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 112, 144, 16, 16 )

[node name="Chest" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 9 )
amount = 10
lifetime = 1.5
speed_scale = 0.7
process_material = SubResource( 8 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="ClosedTexture" type="Sprite" parent="."]
texture = SubResource( 3 )

[node name="OpenTexture2" type="Sprite" parent="."]
modulate = Color( 2, 2, 2, 1 )
texture = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
